Github issue#1267, Navigation small updates — Added new project button to the details page as well. Faced interesting issue while implementing it. In the CreateContainer we are validating project.id prop in the next prop to determine if a new project has been created by the wizard. This logic was causing redirecting back to details page when user clicks on the new project button from the details page because it thinks that a new project with id of the current project is created and redirects to its details page. As a fix, now we are checking if current property value for project.id is not defined and next property value is defined to determine that new project is created. Further, we have to clear the project from the redux state when CreateContainer is mounted.

--- a/src/components/TopBar/ProjectToolBar.scss
+++ b/src/components/TopBar/ProjectToolBar.scss
@@ -54,6 +54,33 @@
       }
     }
 
+    .new-project-link {
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+      align-items: center;
+      margin-left: 20px;
+
+      .new-project-icon {
+        width: 20px;
+        height: 20px;
+        background-color: $tc-gray-50;
+        border-radius: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        svg {
+          fill: $tc-black;
+          width: 10px;
+          height: 10px;
+        }
+
+        &:hover {
+          background-color: $tc-orange-30;
+        }
+      }
+    }
+
     .bar-column.project-name {
       span {
         @include roboto;
